# trekanten

./: Cargo.toml  README.md
examples/: main.rs
src/: color_buffer.rs  command.rs  depth_buffer.rs  descriptor.rs  device.rs  error.rs  framebuffer.rs  image.rs  instance.rs  lib.rs  main.rs  material.rs  mem.rs  mesh.rs  queue.rs  render_pass.rs  spirv.rs  surface.rs  swapchain.rs  sync.rs  texture.rs  uniform.rs  vertex.rs  window.rs
src/device/: device_selection.rs  error.rs  mod.rs
src/instance/: device.rs  device_selection.rs  error.rs  mod.rs  surface.rs
src/pipeline/: mod.rs
src/pipeline/shaders/: frag.spv  shader.vert.glsl  vert.spv
src/resource/: cache.rs  cached_storage.rs  mod.rs  storage.rs
src/util/: extent.rs  format.rs  mod.rs  vk_debug.rs
